--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="grid-container">
+    <div class="grid-item" id="1">1</div>
+    <div class="grid-item" id="2">2</div>
+    <div class="grid-item" id="3">3</div>
+    <div class="grid-item" id="4">4</div>
+    <div class="grid-item" id="5">5</div>
+    <div class="grid-item" id="6">6</div>
+    <div class="grid-item" id="7">7</div>
+    <div class="grid-item" id="8">8</div>
+    <div class="grid-item" id="9">9</div>
+  </div>
+  
+  <input type="text" id="block_id" placeholder="Enter block ID (1-9)">
+  <input type="text" id="colour_id" placeholder="Enter color">
+  <button id="change_button">Change Color</button>
+  <button id="Reset">Reset</button>
+  
     <script type="text/javascript" src="./script.js">
 </script>
 
